tests/syntax_errors/sasha25_2.tl
-- test case 25.
-- Description : more repuntil. No Until

-- Expected : '2'
require "ifj21" 

function me() :string                                           
    return "the whole project was written by a cat "          
end                                                             
function main()                                                  
 local you : string = "atata"                                 
     repeat                                                     
         repeat                                                 
             repeat                                             
                 repeat                                         
                     repeat                                     
                         repeat                                 
                             local not_true : string = me()     
                              write(not_true)                   
                         until false                            
    return                                                      
end                                                             
main()                                                          

